--- a/src/components/style/projects.scss
+++ b/src/components/style/projects.scss
@@ -43,6 +43,7 @@
         .project-description {
           font-size: 16px;
           color: #fff;
+          width: 80%;
         }
       }
     }
